<?xml version="1.0"?>
<package format="2">
  <name>mmstereo_docker</name>
  <version>0.0.0</version>
  <description>Docker wrapper for mmstereo_ros</description>
  
  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>mmstereo_ros</depend>
</package>